Revised instructions for two exercises

--- a/Module4_strings_solutions.ipynb
+++ b/Module4_strings_solutions.ipynb
@@ -344,7 +344,7 @@
       },
       "source": [
         "<font color='red'>Exercise 9 solution</font>  \n",
-        "Below, write code to determine whether `dog` is equivalent to `Dog`. "
+        "Below, write code to determine whether the strings `dog` and `Dog` are equivalent. "
       ]
     },
     {
@@ -366,7 +366,7 @@
       "source": [
         "## 7. Comparison operators: Less than and greater than  \n",
         "<font color='red'>Exercise 10 possible solution</font>  \n",
-        "Create the variable `fav_book` and assign it the value of your favorite book. In the same cell, start a new line and create the variable `fav_movie`, and then assign it the value of your favorite movie.  \n",
+        "Create the variable `fav_book` and assign it your favorite book as a string. In the same cell, start a new line and create the variable `fav_movie`, and then assign it your favorite movie as a string.  \n",
         "Note: Your favorite book and movie may be different, but the structure of the solution should be the same as below."
       ]
     },
