Revised instructions for last exercise

--- a/Module6_lists_and_tuples.ipynb
+++ b/Module6_lists_and_tuples.ipynb
@@ -567,7 +567,7 @@
         "A key difference between lists and tuples is that tuples are immutable. As such, you *can't* use the indexing operator to make item substitutions in a tuple. Otherwise, all of the other list operations that you learned above can also be applied to tuples.  \n",
         " \n",
         "<font color='red'>Exercise 16</font>  \n",
-        "To gain practice with which operations do and don't work with tuples, start by creating `pres_tup` with the last names of the three most recent presidents. Then...\n",
+        "To gain practice with which operations do and don't work with tuples, start by creating the variable `pres_tup` and assign it a tuple with the last names of the three most recent presidents. Then...\n",
         "* Determine the max value of the tuple, printing the result\n",
         "* Make a new list called `pres_double` that includes two copies of `pres_tup`, and then print the result\n",
         "* Attempt to replace one of the names in `pres_tup` with your own last name. Do you understand the error message?"
