Revised instructions for last exercise

--- a/Module6_lists_and_tuples_solutions.ipynb
+++ b/Module6_lists_and_tuples_solutions.ipynb
@@ -462,7 +462,7 @@
       "source": [
         "## 5. Tuples  \n",
         "<font color='red'>Exercise 16 solution</font>  \n",
-        "Start by creating `pres_tup` with the last names of the three most recent presidents. Then...\n",
+        "Start by creating the variable `pres_tup` and assign it a tuple with the last names of the three most recent presidents. Then...\n",
         "* Determine the max value of the tuple, printing the result\n",
         "* Make a new list called `pres_double` that includes two copies of `pres_tup`, and then print the result\n",
         "* Attempt to replace one of the names in `pres_tup` with your own last name.  \n",
