Updated section on data files

--- a/Module8_pandas1.ipynb
+++ b/Module8_pandas1.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "Module8_pandas1.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -34,7 +33,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module8_pandas1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module8_pandas1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -70,7 +69,7 @@
         "id": "hI79e_J1lAAH"
       },
       "source": [
-        "## 1. A couple notes before you start \n",
+        "## 1. A couple notes before you start\n",
         "* This file is view only, meaning that you can't edit it.\n",
         "    * To create an editable copy, look towards the top of the notebook and click on `Copy to Drive`. This will cause a new tab to open with your own personal copy.\n",
         "    * If you want to refer back to your copy in the future, you can find it in Google Drive in a folder called `Colab Notebooks`.\n",
@@ -153,7 +152,7 @@
         "Typically, dataframes are created by reading in a file. The most common file type used with Pandas is a CSV file, e.g., `my_file.csv`. Files created in Excel and Sheets can be exported as CSV files, so if you have an existing dataset, you can save it as a CSV file and read it in with Pandas.  \n",
         "\n",
         "### 3b. Using Pandas  \n",
-        "A Python library, such as Pandas, has to be imported before its functions can be used. It is best to include this import code at the top of a given notebook. \n",
+        "A Python library, such as Pandas, has to be imported before its functions can be used. It is best to include this import code at the top of a given notebook.\n",
         "\n",
         "To import Pandas, use the keyword `import` followed by the library name, `pandas`. It is also standard to use an abbreviation when importing libraries; for pandas, this abbreviation is `pd`. Putting this all together, we can import Pandas with the following line of code:\n",
         "\n",
@@ -168,9 +167,7 @@
       "metadata": {
         "id": "sjOCmnIDfaw8"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -195,7 +192,7 @@
         "\n",
         "For the purposes of this tutorial, we'll be using a CSV file stored on GitHub, which can be accessed via a URL. Below, you'll see that we created the variable `filepath` and assigned it a string with the desired URL.\n",
         "\n",
-        "In a future module, we'll teach you how to create your own GitHub account so that you can drop files there and obtain URLs, and we'll also teach you an alternate approach in which you can instead add files to Google Drive. The latter involves a couple extra steps but is nonetheless quite doable.\n",
+        "In a future module, we'll teach you how to create your own GitHub account where you can add data files, and we'll also teach you a couple alternate approaches that utilize Google Drive.\n",
         "\n",
         "<font color='red'>Exercise 2</font>  \n",
         "One line 1 below, we've defined the filepath for you. Insert a new line in the cell, and use the code provided above to create a dataframe named `my_df` that uses this filepath. Be sure to run the cell when you're done!"
@@ -233,9 +230,7 @@
       "metadata": {
         "id": "BcDZjBqmrvew"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -260,9 +255,7 @@
       "metadata": {
         "id": "VYBeCEQrrve4"
       },
-      "source": [
-        ""
-      ],
+      "source": [],
       "execution_count": null,
       "outputs": []
     },
@@ -278,9 +271,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "W0sOXPUREsds"
       },
@@ -340,9 +331,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "Pm0ENFyjhLPx"
       },
@@ -415,9 +404,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "Zh5mtKGMjx7U"
       },
@@ -436,9 +423,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "M0SPMC8lkCdZ"
       },
@@ -453,7 +438,7 @@
         "* Data that meet criteria 1 *and* 2\n",
         "* Data that meet criteria 1 *or* 2  \n",
         "\n",
-        "The syntax here is different than what you've previously learned about combining Boolean expressions, which was to simply use the words `and` and `or`. \n",
+        "The syntax here is different than what you've previously learned about combining Boolean expressions, which was to simply use the words `and` and `or`.\n",
         "\n",
         "In Pandas, we instead use symbols:\n",
         "* The `&` symbol represents `and`\n",
@@ -462,7 +447,7 @@
         "See below for pseudocode examples of each:\n",
         "\n",
         "And: `my_df[(criteria1) & (criteria2)]`  \n",
-        "Or: `my_df[(criteria1) | (criteria2)]` \n",
+        "Or: `my_df[(criteria1) | (criteria2)]`\n",
         "\n",
         "Note: It is important to put parentheses around each criteria, i.e., each set of Boolean expressions. The precedence of the `&` and `|` operators is greater than that of the comparison operators, so the parentheses help to force Pandas to attend to each Boolean expression first.\n",
         "\n",
@@ -496,9 +481,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "lROK3CsqnAHm"
       },
@@ -564,9 +547,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "ohvDlwGHtQTE"
       },
