Added comments to code cells to avoid AI message

--- a/Module2_datatypes.ipynb
+++ b/Module2_datatypes.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2_datatypes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/valeriecarr/APEX/blob/main/Module2_datatypes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -66,7 +66,7 @@
         "# APEX Faculty Training, Module 2: Datatypes\n",
         "Created by Valerie Carr and Jaime Zuspann  \n",
         "Licensed under a Creative Commons license: CC BY-NC-SA  \n",
-        "Last updated: Feb 3, 2022 \n",
+        "Last updated: Feb 3, 2022\n",
         "\n",
         "**Learning Outcomes**:  \n",
         "1. To learn about different different Python data types, including integers and floats\n",
@@ -95,7 +95,7 @@
       },
       "source": [
         "## 2. Data types\n",
-        "Many programming languages, including Python, utilize a variety of data types, each with different properties. \n",
+        "Many programming languages, including Python, utilize a variety of data types, each with different properties.\n",
         "\n",
         "Today, you'll learn about two number types: integers and floats. In future modules, you'll learn about strings, lists, tuples, dictionaries, and dataframes.\n",
         "\n",
@@ -157,7 +157,7 @@
         "id": "tAUAsKiUDcqg"
       },
       "source": [
-        ""
+        "# Planetary math\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -178,7 +178,7 @@
         "id": "FmT6gWQVDcqj"
       },
       "source": [
-        ""
+        "# Cubism\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -199,7 +199,7 @@
         "id": "GE0I91BbDcqm"
       },
       "source": [
-        ""
+        "# Division\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -211,7 +211,7 @@
       },
       "source": [
         "### 3b. Which data type?\n",
-        "You may have noticed that some of the expressions above returned integers, whereas others returned floats. \n",
+        "You may have noticed that some of the expressions above returned integers, whereas others returned floats.\n",
         "\n",
         "Here are the rules for `int` and `float`:  \n",
         "* When two `int` values are added, subtracted, or multiplied together, the result is also an `int` value.  \n",
@@ -277,7 +277,7 @@
         "* PEMDAS (Parentheses, Exponents, Multiplication/Division, Addition/Subtraction)  \n",
         "* All else being equal, left to right\n",
         "\n",
-        "While not always necessary, parentheses can be helpful for clarification for human readers. \n",
+        "While not always necessary, parentheses can be helpful for clarification for human readers.\n",
         "\n",
         "<font color='red'>Exercise 5</font>  \n",
         "Add parentheses to the expression below to help clarify the order of operations, ensuring that your answer is still 24."
@@ -289,6 +289,7 @@
         "id": "QSl75pCwDcqw"
       },
       "source": [
+        "# Add parentheses\n",
         "20 * 1 + 2 ** 2"
       ],
       "execution_count": null,
@@ -320,7 +321,7 @@
         "id": "6Sxf0gibDcqz"
       },
       "source": [
-        ""
+        "# Absolute value\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -332,7 +333,7 @@
       },
       "source": [
         "<font color='red'>Exercise 7</font>  \n",
-        "Determine the lowest student grade received on a quiz: 76, 98, 83, 71 "
+        "Determine the lowest student grade received on a quiz: 76, 98, 83, 71"
       ]
     },
     {
@@ -341,7 +342,7 @@
         "id": "rdM6rOpvDcq1"
       },
       "source": [
-        ""
+        "# Lowest grade\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -362,7 +363,7 @@
         "id": "-jMffkdcDcq3"
       },
       "source": [
-        ""
+        "# Highest price\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -375,7 +376,7 @@
       "source": [
         "## 4. Boolean expressions\n",
         "\n",
-        "A Boolean expression is a type of numeric expression that evaluates to `True` or `False`. \n",
+        "A Boolean expression is a type of numeric expression that evaluates to `True` or `False`.\n",
         "\n",
         "### 4a. Basic Boolean operators\n",
         "  \n",
@@ -383,16 +384,16 @@
         "  \n",
         "* Less than: `<`  \n",
         "`42 < 42 #returns False`  \n",
-        "`15 < 51 #returns True` \n",
+        "`15 < 51 #returns True`\n",
         "* Less than or equal to: `<=`  \n",
         "`42 <= 42 #returns True`  \n",
         "`15 <= 51 #returns True`  \n",
         "* Greater than: `>`  \n",
         "`42 > 42 #returns False`  \n",
-        "`15 > 51 #returns False` \n",
+        "`15 > 51 #returns False`\n",
         "* Greater than or equal to: `>=`  \n",
         "`42 >= 42 #returns True`  \n",
-        "`15 >= 51 #returns False` \n",
+        "`15 >= 51 #returns False`\n",
         "* Equal to: `==`  \n",
         "`42 == 42 #returns True`  \n",
         "`15 == 51 #returns False`  \n",
@@ -431,6 +432,7 @@
         "id": "0Ri5U_7WKVNf"
       },
       "source": [
+        "# True or false?\n",
         "2 * max(14, 3, 9, 17, 11) == 7 + 3 * 9"
       ],
       "execution_count": null,
@@ -463,7 +465,7 @@
         "id": "qWi1OQIlDcq5"
       },
       "source": [
-        ""
+        "# Complex Boolean\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -484,7 +486,7 @@
         "id": "UwWSKVe4Dcq8"
       },
       "source": [
-        ""
+        "# Another complex Boolean\n"
       ],
       "execution_count": null,
       "outputs": []
@@ -562,7 +564,7 @@
         "id": "QRjGc_2gDcrY"
       },
       "source": [
-        "## Congrats, you're done! \n",
+        "## Congrats, you're done!\n",
         "At this point, you've learned the basics of Python datatypes, mathematical and Boolean expressions, variable names, and assignment. If you'd like more practice with these concepts, try the bonus exercises for this module [here](https://colab.research.google.com/github/JaimeAdele/APEX/blob/main/Module2_datatypes_bonus_exercises.ipynb). In the next module, we'll learn about variables."
       ]
     }
